# django-htmx-starter

./: README.md  package-lock.json  package.json  pyproject.toml  tailwind.config.js
app/: models.py  settings.py  urls.py
static/css/: styles.css
templates/: base.html  index.html
templates/account/: email_confirm.html  login.html  logout.html  password_reset.html  password_reset_done.html  password_reset_from_key.html  password_reset_from_key_done.html  signup.html  signup_closed.html  verification_sent.html
templates/partials/: cta.html  footer.html  header.html  hero.html  pricing.html
users/: admin.py  models.py
users/migrations/: 0001_initial.py
